<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/latestJudgementsFragment"
            android:icon="@drawable/ic_latest_judgement"
            android:title="@string/latest_judgements" />

        <item
            android:id="@+id/lawReportsFragment"
            android:icon="@drawable/ic_law_reports"
            android:title="@string/law_reports" />

        <item
            android:id="@+id/lawsOfNigeriaFragment"
            android:icon="@drawable/ic_laws_of_nigeria"
            android:title="@string/laws_of_nigeria" />

        <item
            android:id="@+id/civilProcedureRulesFragment"
            android:icon="@drawable/ic_hamburger"
            android:title="@string/civil_procedure_rules" />

        <item
            android:id="@+id/indexAndDigestFragment"
            android:icon="@drawable/ic_index_and_digest"
            android:title="@string/index_digest" />

        <item
            android:id="@+id/textBooksAndJournalsFragment"
            android:icon="@drawable/ic_textbooks_journals"
            android:title="@string/textbooks_journals" />

        <item
            android:id="@+id/myResearchFolderFragment"
            android:icon="@drawable/ic_my_research_folder"
            android:title="@string/my_research_folder" />

        <item
            android:id="@+id/wordsInGoldFragment"
            android:icon="@drawable/ic_words_in_gold"
            android:title="@string/words_in_gold" />

        <item
            android:id="@+id/newContentsFragment"
            android:icon="@drawable/ic_new_contents"
            android:title="@string/new_contents" />

    </group>
</menu>