<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SupremeCourtFolderFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/folder_content_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_20dp"
                android:fontFamily="@font/work_sans"
                android:text="@string/essien_amp_nor_v_mohammed_2005_ca"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/work_sans"
                android:padding="@dimen/padding_14dp"
                android:text="@string/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/principle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/principle"
            android:textColor="@color/deep_purple"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <TextView
            android:id="@+id/supreme_court_folder_reference_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/text_view_bg"
            android:fontFamily="@font/work_sans"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/_2020_lpelr_50514_ca"
            android:textColor="#72B17A"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/principle_textView" />

        <TextView
            android:id="@+id/judgement_summary_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/judgement_summary"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/supreme_court_folder_reference_number" />

        <TextView
            android:id="@+id/full_judgement_textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_20dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/full_judgement"
            android:textColor="@color/chinese_black"
            android:textSize="@dimen/text_size_14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/judgement_summary_textView" />

        <TextView
            android:id="@+id/view_summary_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_26dp"
            android:background="@drawable/view_summary_btn_bg"
            android:fontFamily="@font/work_sans"
            android:paddingHorizontal="@dimen/padding_45dp"
            android:paddingVertical="@dimen/padding_15dp"
            android:text="@string/view_summary"
            android:textColor="@color/deep_purple"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/read_full_summary_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_26dp"
            android:background="@drawable/view_summary_btn_bg"
            android:fontFamily="@font/work_sans"
            android:paddingHorizontal="@dimen/padding_24dp"
            android:paddingVertical="@dimen/padding_15dp"
            android:text="@string/read_full_judgement"
            android:textColor="@color/deep_purple"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>