<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lotion"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LatestJudgementsFragment">

        <TextView
            android:id="@+id/latest_judgements_overview_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_34dp"
            android:layout_marginTop="@dimen/margin_27dp"
            android:fontFamily="@font/work_sans"
            android:text="@string/latest_judgements_overview"
            android:textColor="@color/japanese_indigo"
            android:textSize="@dimen/text_size_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/supreme_court_layout"
            android:layout_width="wrap_content"
            android:background="@drawable/item_selected_background"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="@dimen/padding_12dp"
            android:paddingVertical="@dimen/padding_10dp"
            android:layout_marginStart="@dimen/margin_34dp"
            android:layout_marginTop="@dimen/margin_44dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latest_judgements_overview_textView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supreme_court_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans"
                android:text="@string/supreme_court"
                android:textColor="@color/cadet_grey"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/court_of_appeal_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/item_selected_background"
            android:paddingStart="@dimen/padding_25dp"
            android:paddingEnd="@dimen/padding_12dp"
            android:paddingVertical="@dimen/padding_10dp"
            android:layout_marginStart="@dimen/margin_13dp"
            android:layout_marginTop="@dimen/margin_44dp"
            app:layout_constraintStart_toEndOf="@id/supreme_court_layout"
            app:layout_constraintTop_toBottomOf="@id/latest_judgements_overview_textView">

            <TextView
                android:id="@+id/court_of_appeal_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/work_sans"
                android:text="@string/court_of_appeal"
                android:textColor="@color/cadet_grey"
                android:textSize="@dimen/text_size_14sp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/supreme_court_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_34dp"
            android:layout_marginTop="@dimen/margin_44dp"
            android:layout_marginEnd="@dimen/margin_4dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/court_of_appeal_layout"
            app:spanCount="3"
            tools:listitem="@layout/supreme_court_recycler_view_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>