<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_purple">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dashboard_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/search_view_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_34dp"
                    android:background="@drawable/search_view_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/search_icon_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_21dp"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/search_view_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_12dp"
                        android:layout_marginStart="@dimen/margin_20dp"
                        android:background="@null"
                        android:textSize="@dimen/text_size_14sp"
                        android:fontFamily="@font/work_sans"
                        android:hint="@string/search_cases_and_files"
                        android:textColorHint="@color/off_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/search_icon_imageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_61dp"
                        android:layout_marginEnd="@dimen/margin_5dp"
                        android:background="@color/light_purple"
                        android:paddingHorizontal="@dimen/padding_16dp"
                        android:paddingVertical="@dimen/padding_6dp"
                        android:text="@string/search"
                        android:fontFamily="@font/work_sans"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/search_view_edit_text"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:backgroundTint="@color/orange"
                app:layout_constraintStart_toEndOf="@id/search_view_layout"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingStart="@dimen/padding_18dp"
                android:paddingEnd="@dimen/padding_16dp"
                android:fontFamily="@font/work_sans"
                android:layout_marginStart="@dimen/margin_15dp"
                android:paddingVertical="@dimen/padding_12dp"
                android:layout_marginVertical="@dimen/margin_17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/history"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_34dp"
                    android:layout_marginVertical="@dimen/margin_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_profile_image"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/content_dashboard"
        layout="@layout/content_dashboard"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>